i don't think you need to save and load gl states anymore add a JsonConfig constructor that accept direct file make fabric api a compile only dependency